--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,4 +21,4 @@ thiserror = "1.0"
 
 csv = "1.1"
 serde = { version = "1", features = ["derive"] }
-rust_decimal = "1"
+rust_decimal = { version = "1", features = ["serde-str"]}
